corretta definizione variabile per importo totale

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -73,7 +73,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <%= var itot = 0; %>
+                <% var itot = 0; %>
                 <% for(var i = 0; i < products.length;i++) { %>
                 <%= itot += products[i].iimp; %>
                 <tr>
