--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -75,7 +75,7 @@
                 <tbody>
                 <% var itot = 0; %>
                 <% for(var i = 0; i < products.length;i++) { %>
-                <%= itot += products[i].iimp; %>
+                <%= itot += parseInt(products[i].iimp); %>
                 <tr>
                     <th scope="row"><%= products[i].ccod %></th>
                     <td><%= products[i].xdesc %></td>
@@ -91,7 +91,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <th scope="col"><%= itot %></thsc>
+                    <th scope="col"><%= itot %></th>
                 </tr>
                 </tfoot>
             </table>
