--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -71,7 +71,7 @@
                 </thead>
                 <tbody>
                 <% clients.forEach(function(clients) { %>
-                <% if(user.cage === clients.cage || user.cage === 9999){ %>
+                <% if(user.cage === clients.cage || user.cage === 9999 || user.cage === 0){ %>
                 <tr>
                     <th scope="row">
                         <% if (clients.cpiva = '') { %>
