corretta valorizzazione campo nota

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-auto">
                 <form method="post" action="/new-order-sum">
-                    <input type="text" name="xnote" value="" maxlength="1000" spellcheck="false" value="<%= xnota %>">
+                    <input type="text" name="xnote" value="<%= xnota %>" maxlength="1000" spellcheck="false">
                     <input type="hidden" name="idOrd" value="<%= idOrd %>">
                     <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
                         <i class="material-icons">&#xe161</i> Conferma
