--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -95,19 +95,19 @@
     <div class="form-row">
         <div class="form-group col">
             <label>Agente</label>
-            <input type="number" class="form-control" name="cage" maxlength="5" required disabled>
+            <input type="number" class="form-control" name="cage" maxlength="5" value="<%= cage %>"required disabled>
         </div>
         <div class="form-group col">
             <label>Tipo commerciale</label>
-            <input type="number" class="form-control" name="ctipcom" maxlength="2" value="30" required disabled>
+            <input type="number" class="form-control" name="ctipcom" maxlength="2" value="<%= ctipcom %>" required disabled>
         </div>
         <div class="form-group col">
             <label>Categoria</label>
-            <input type="text" class="form-control" name="ccat" maxlength="10" value="PROF" required disabled>
+            <input type="text" class="form-control" name="ccat" maxlength="10" value="<% ccat %>" required disabled>
         </div>
         <div class="form-group col">
             <label>Zona</label>
-            <input type="number" class="form-control" name="czona" maxlength="1" required disabled>
+            <input type="number" class="form-control" name="czona" maxlength="1" value="<%= czona %>" required disabled>
         </div>
     </div>
     <div class="form-row">
