--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -112,7 +112,33 @@
             </div>
             <div class="col-md-auto">
                 <form method="post" action="/new-order-sum">
-                    <input type="text" name="xnote" value="<%= xnota %>" maxlength="1000" spellcheck="false">
+                    <button class="btn-primary bg-transparent text-primary border-0 align-bottom"
+                            data-toggle="modal"
+                            data-target="#noteModal">
+                        <i class="material-icons">&#e85d</i> Aggiungi Note
+                    </button>
+                    <div class="modal fade" id="noteModal" tabindex="-1" role="dialog"
+                         aria-labelledby="Aggiungi note all'ordine" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title"
+                                        id="noteModalTitle">Aggiungi note all'ordine</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <input type="text" name="xnote" value="<%= xnota %>" maxlength="1000"
+                                           spellcheck="false">
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <input type="hidden" name="idOrd" value="<%= idOrd %>">
                     <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
                         <i class="material-icons">&#xe161</i> Conferma
