--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -41,7 +41,7 @@
             <div class="form-group col">
                 <label>Codice cliente</label>
                 <input type="number" class="form-control" name="ccod" maxlength="5" value="<%= ccod %>" min="3000"
-                       max="3999" disabled readonly required>
+                       max="3999" disabled required>
             </div>
             <div class="form-group col">
                 <label>Codice Fiscale/Partita I.V.A.</label>
