--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -41,7 +41,7 @@
             <div class="form-group col">
                 <label>Codice cliente</label>
                 <input type="number" class="form-control" name="ccod" maxlength="5" value="<%= ccod %>" min="3000"
-                       max="3999" disabled required>
+                       max="3999" readonly required>
             </div>
             <div class="form-group col">
                 <label>Codice Fiscale/Partita I.V.A.</label>
@@ -109,7 +109,12 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <input type="text" class="form-control" name="ccat" maxlength="10" value="PROF" required>
+                <select class="custom-select" name="ccat" id="inputGroupSelect01" <% (cazi && cazi === 'var' ? '' : 'readonly') %>>
+                    <option selected>Selezionare una voce</option>
+                    <option value="PRIVAT">Privato</option>
+                    <option value="PROF">Professionale</option>
+                    <option value="RIVEN">Rivendita</option>
+                </select>
             </div>
             <div class="form-group col">
                 <label>Zona</label>
@@ -127,7 +132,12 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <input type="text" class="form-control" name="ccat" maxlength="10" value="PROF" readonly required>
+                <select class="custom-select" name=""ccat" id="inputGroupSelect01" <% (cazi && cazi === 'var' ? '' : 'readonly') %>>
+                    <option selected>Selezionare una voce</option>
+                    <option value="PRIVAT">Privato</option>
+                    <option value="PROF">Professionale</option>
+                    <option value="RIVEN">Rivendita</option>
+                </select>
             </div>
             <div class="form-group col">
                 <label>Agente</label>
