correct inline if

--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -109,7 +109,7 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <select class="custom-select" name="ccat" id="inputGroupSelect01" <% (cazi && cazi === 'var' ? '' : 'readonly') %>>
+                <select class="custom-select" name="ccat" id="inputGroupSelect01">
                     <option selected>Selezionare una voce</option>
                     <option value="PRIVAT">Privato</option>
                     <option value="PROF">Professionale</option>
@@ -132,7 +132,7 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <select class="custom-select" name=""ccat" id="inputGroupSelect01" <% (cazi && cazi === 'var' ? '' : 'readonly') %>>
+                <select class="custom-select" name=""ccat" id="inputGroupSelect01">
                     <option selected>Selezionare una voce</option>
                     <option value="PRIVAT">Privato</option>
                     <option value="PROF">Professionale</option>
