--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -37,108 +37,133 @@
             </ul>
         </div>
     </nav>
-
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Codice cliente</label>
-            <input type="number" class="form-control" name="ccod" maxlength="5" value="<%= ccod %>" required readonly>
+    <% if (cazi && cazi === 'var') { %>
+    <form action="/edit-client" method="post" id="formDettCli">
+        <% } %>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Codice cliente</label>
+                <input type="number" class="form-control" name="ccod" maxlength="5" value="<%= ccod %>" required
+                       readonly>
+            </div>
+            <div class="form-group col">
+                <label>Codice Fiscale/Partita I.V.A.</label>
+                <input type="text" class="form-control" name="cfis" maxlength="16" value="<%= cfis %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-        <div class="form-group col">
-            <label>Codice Fiscale/Partita I.V.A.</label>
-            <input type="text" class="form-control" name="cfis" maxlength="16" value="<%= cfis %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Nome e Cognome</label>
+                <input type="text" class="form-control" name="xcli" maxlength="60" value="<%= xcli %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Nome e Cognome</label>
-            <input type="text" class="form-control" name="xcli" maxlength="60" value="<%= xcli %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Ragione sociale</label>
+                <input type="text" class="form-control" name="xragsoc" maxlength="60" value="<%= xragsoc %>" required
+                        <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Ragione sociale</label>
-            <input type="text" class="form-control" name="xragsoc" maxlength="60" value="<%= xragsoc %>" required
-                   <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Comune</label>
+                <input type="text" class="form-control" name="xcom" maxlength="30" value="<%= xcom %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Provincia</label>
+                <input type="text" class="form-control" name="cprv" maxlength="2" value="<%= cprv %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>C.A.P.</label>
+                <input type="number" class="form-control" name="ccap" maxlength="5" value="<%= ccap %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Nazione</label>
+                <input type="text" class="form-control" name="xnaz" maxlength="20" value="<%= xnaz %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Comune</label>
-            <input type="text" class="form-control" name="xcom" maxlength="30" value="<%= xcom %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Indirizzo</label>
+                <input type="text" class="form-control" name="xind" maxlength="40" value="<%= xind %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-        <div class="form-group col">
-            <label>Provincia</label>
-            <input type="text" class="form-control" name="cprv" maxlength="2" value="<%= cprv %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>C.A.P.</label>
-            <input type="number" class="form-control" name="ccap" maxlength="5" value="<%= ccap %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>Nazione</label>
-            <input type="text" class="form-control" name="xnaz" maxlength="20" value="<%= xnaz %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Indirizzo</label>
-            <input type="text" class="form-control" name="xind" maxlength="40" value="<%= xind %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>E-mail</label>
-            <input type="email" class="form-control" name="xmail" maxlength="60" value="<%= xmail %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>Sconto cliente</label>
-            <input type="number" step="0.01" class="form-control" name="psco" value="<%= psco %>" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-    </div>
-
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Agente</label>
-            <input type="number" class="form-control" name="cage" maxlength="5" value="<%= cage %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>Tipo commerciale</label>
-            <input type="number" class="form-control" name="ctipcom" maxlength="2" value="<%= ctipcom %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>Categoria</label>
-            <select class="custom-select" name="ccat" id="inputGroupSelect01" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-                <option selected>Selezionare una voce</option>
-                <option value="PRIVAT">Privato</option>
-                <option value="PROF">Professionale</option>
-                <option value="RIVEN">Rivendita</option>
-            </select>
-        </div>
-        <div class="form-group col">
-            <label>Zona</label>
-            <input type="number" class="form-control" name="czona" maxlength="1" value="<%= czona %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col">
-            <label>Abi</label>
-            <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>Cab</label>
-            <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-        </div>
-        <div class="form-group col">
-            <label>N° conto</label>
-            <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>" required
-                   <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>E-mail</label>
+                <input type="email" class="form-control" name="xmail" maxlength="60" value="<%= xmail %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Sconto cliente</label>
+                <input type="number" step="0.01" class="form-control" name="psco"
+                       value="<%= psco %>" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
 
-        <div class="form-group col">
-            <label>N° telefono</label>
-            <input type="number" class="form-control" name="ntel" maxlength="13" value="<%= ntel %>" required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Agente</label>
+                <input type="number" class="form-control" name="cage" maxlength="5" value="<%= cage %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Tipo commerciale</label>
+                <input type="number" class="form-control" name="ctipcom" maxlength="2" value="<%= ctipcom %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Categoria</label>
+                <select class="custom-select" name="ccat" form="formDettCli"
+                        id="inputGroupSelect01" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                    <option selected>Selezionare una voce</option>
+                    <option value="PRIVAT">Privato</option>
+                    <option value="PROF">Professionale</option>
+                    <option value="RIVEN">Rivendita</option>
+                </select>
+            </div>
+            <div class="form-group col">
+                <label>Zona</label>
+                <input type="number" class="form-control" name="czona" maxlength="1" value="<%= czona %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
         </div>
-    </div>
+        <div class="form-row">
+            <div class="form-group col">
+                <label>Abi</label>
+                <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Cab</label>
+                <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>N° conto</label>
+                <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>" required
+                        <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+
+            <div class="form-group col">
+                <label>N° telefono</label>
+                <input type="number" class="form-control" name="ntel" maxlength="13" value="<%= ntel %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+        </div>
+        <% if (cazi && cazi === 'var') { %>
+        <button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+            <i class="material-icons">&#xe161</i> Conferma
+        </button>
+    </form>
+    <% } %>
 </div>
 </body>
 </html>
