--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -36,7 +36,7 @@
             </ul>
         </div>
     </nav>
-    <form action="/new-client" method="post">
+    <form action="/new-client" method="post" id="formNewCli">
         <div class="form-row">
             <div class="form-group col">
                 <label>Codice cliente</label>
@@ -109,7 +109,7 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <select class="custom-select" name="ccat" id="inputGroupSelect01">
+                <select class="custom-select" name="ccat" form="formNewCli" id="inputGroupSelect01">
                     <option selected>Selezionare una voce</option>
                     <option value="PRIVAT">Privato</option>
                     <option value="PROF">Professionale</option>
@@ -132,7 +132,7 @@
             </div>
             <div class="form-group col">
                 <label>Categoria</label>
-                <select class="custom-select" name=""ccat" id="inputGroupSelect01">
+                <select class="custom-select" name="ccat" form="formNewCli" id="inputGroupSelect01">
                     <option selected>Selezionare una voce</option>
                     <option value="PRIVAT">Privato</option>
                     <option value="PROF">Professionale</option>
