gestione annulla in new-client.ejs

--- a/views/new-order.ejs
+++ b/views/new-order.ejs
@@ -60,7 +60,7 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th scope="col">Partia IVA <a href="/new-client" role="button"
+                    <th scope="col">Partia IVA <a href="/new-client?newOrder=s" role="button"
                                                   class="btn-primary bg-transparent mr-auto mb-2 text-primary border-0 align-bottom"><i
                                     class="material-icons">&#xe05e</i></a></th>
                     <th scope="col">Ragione sociale</th>
