--- a/views/client-list.ejs
+++ b/views/client-list.ejs
@@ -59,7 +59,7 @@
             <table class="table table-hover">
                 <thead>
                 <tr>
-                    <th scope="col">Codice Cliente<a href="/new-client" role="button"
+                    <th scope="col">Codice Cliente<a href="/new-client?newOrder=n" role="button"
                                                      class="btn-primary bg-transparent mr-auto mb-2 text-primary border-0 align-bottom"><i
                                     class="material-icons">&#xe05e</i></a></th>
                     </th>
