gestione annulla in new-client.ejs

--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -43,6 +43,7 @@
         </div>
     </nav>
     <form action="/new-client" method="post" id="formNewCli">
+        <input type="hidden" name="newOrder" value="<%= newOrder %>">
         <div class="form-row">
             <div class="form-group col">
                 <label>Codice cliente</label>
