--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -47,8 +47,19 @@
                        readonly>
             </div>
             <div class="form-group col">
-                <label>Codice Fiscale/Partita I.V.A.</label>
+                <label>Sconto cliente</label>
+                <input type="number" step="0.01" class="form-control" name="psco" max="100.00"
+                       value="<%= psco %>" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Codice Fiscale</label>
                 <input type="text" class="form-control" name="cfis" maxlength="16" value="<%= cfis %>"
+                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+            </div>
+            <div class="form-group col">
+                <label>Partita I.V.A.</label>
+                <input type="text" pattern="^[0-9]" class="form-control" name="cpiva" maxlength="11"
+                       value="<%= cpiva %>"
                        required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
         </div>
@@ -101,11 +112,6 @@
                 <input type="email" class="form-control" name="xmail" maxlength="60" value="<%= xmail %>"
                        required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
-            <div class="form-group col">
-                <label>Sconto cliente</label>
-                <input type="number" step="0.01" class="form-control" name="psco" max="100.00"
-                       value="<%= psco %>" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-            </div>
         </div>
 
         <div class="form-row">
@@ -123,7 +129,7 @@
                 <label>Categoria</label>
                 <select class="custom-select" name="ccat" form="formDettCli"
                         id="inputGroupSelect01" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-                    <option  <%- (ccat && ccat != 'PRIVAT') ? '' : 'selected' %>>Selezionare una voce</option>
+                    <option <%- (ccat && ccat != 'PRIVAT') ? '' : 'selected' %>>Selezionare una voce</option>
                     <option value="PRIVAT" <%- (ccat && ccat === 'PRIVAT') ? 'selected' : '' %>>Privato</option>
                     <option value="PROF" <%- (ccat && ccat === 'PROF') ? 'selected' : '' %>>Professionale</option>
                     <option value="RIVEN" <%- (ccat && ccat === 'RIVEN') ? 'selected' : '' %>>Rivendita</option>
