--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -58,7 +58,7 @@
             </div>
             <div class="form-group col">
                 <label>Partita I.V.A.</label>
-                <input type="text" pattern="^[0-9]" class="form-control" name="cpiva" maxlength="11"
+                <input type="text" pattern="^[0-9]${11}" class="form-control" name="cpiva" maxlength="11"
                        value="<%= cpiva %>"
                        required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
@@ -165,7 +165,7 @@
 
             <div class="form-group col">
                 <label>N° telefono</label>
-                <input type="number" class="form-control" name="ntel" maxlength="13" value="<%= ntel %>"
+                <input type="tel" pattern="^[0-9-+s()]*$" class="form-control" name="ntel" maxlength="13" value="<%= ntel %>"
                        required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
         </div>
