--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group col">
                 <label>Partita I.V.A.</label>
-                <input type="text" pattern="^[0-9]" class="form-control" name="cpiva" maxlength="11" value="<%= cpiva %>"
+                <input type="text" pattern="^[0-9]${11}" class="form-control" name="cpiva" maxlength="11" value="<%= cpiva %>"
                        required>
             </div>
         </div>
