--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -129,7 +129,7 @@
                 <label>Categoria</label>
                 <select class="custom-select" name="ccat" form="formDettCli"
                         id="inputGroupSelect01" <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
-                    <option <%- (ccat && ccat != 'PRIVAT') ? '' : 'selected' %>>Selezionare una voce</option>
+                    <option <%- (ccat && ccat != '') ? '' : 'selected' %>>Selezionare una voce</option>
                     <option value="PRIVAT" <%- (ccat && ccat === 'PRIVAT') ? 'selected' : '' %>>Privato</option>
                     <option value="PROF" <%- (ccat && ccat === 'PROF') ? 'selected' : '' %>>Professionale</option>
                     <option value="RIVEN" <%- (ccat && ccat === 'RIVEN') ? 'selected' : '' %>>Rivendita</option>
