--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -124,20 +124,20 @@
             <div class="form-group col">
                 <label>Categoria</label>
                 <select class="custom-select" name="ccat" form="formNewCli" id="inputGroupSelect01">
-                    <option selected>Selezionare una voce</option>
-                    <option value="PRIVAT">Privato</option>
-                    <option value="PROF">Professionale</option>
-                    <option value="RIVEN">Rivendita</option>
+                    <option <%- (ccat && ccat != '') ? '' : 'selected' %>>Selezionare una voce</option>
+                    <option value="PRIVAT" <%- (ccat && ccat === 'PRIVAT') ? 'selected' : '' %>>Privato</option>
+                    <option value="PROF" <%- (ccat && ccat === 'PROF') ? 'selected' : '' %>>Professionale</option>
+                    <option value="RIVEN" <%- (ccat && ccat === 'RIVEN') ? 'selected' : '' %>>Rivendita</option>
                 </select>
             </div>
             <div class="form-group col">
                 <label>Zona</label>
                 <select class="custom-select" name="czona" form="formNewCli"
                         id="inputGroupSelect01">
-                    <option selected>Selezionare una voce</option>
-                    <option value="1">Veneto</option>
-                    <option value="2">Lombardia</option>
-                    <option value="3">Piemonte</option>
+                    <option <%- (czona && czona != '') ? '' : 'selected' %>>Selezionare una voce</option>
+                    <option value="1" <%- (czona && czona === '1') ? 'selected' : '' %>>Veneto</option>
+                    <option value="2" <%- (czona && czona === '2') ? 'selected' : '' %>>Lombardia</option>
+                    <option value="3" <%- (czona && czona === '3') ? 'selected' : '' %>>Piemonte</option>
                 </select>
             </div>
             <% } else { %>
