--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -67,11 +67,11 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Nome</label>
-                <input type="text" class="form-control" name="xnome" maxlength="15" value="<%= xnome %>" required>
+                <input type="text" class="form-control" name="xnome" maxlength="15" value="<%= xnome %>">
             </div>
             <div class="form-group col">
                 <label>Cognome</label>
-                <input type="text" class="form-control" name="xcogn" maxlength="15" value="<%= xcogn %>" required>
+                <input type="text" class="form-control" name="xcogn" maxlength="15" value="<%= xcogn %>">
             </div>
         </div>
         <div class="form-row">
@@ -183,15 +183,15 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Abi</label>
-                <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>" required>
+                <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>">
             </div>
             <div class="form-group col">
                 <label>Cab</label>
-                <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>" required>
+                <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>">
             </div>
             <div class="form-group col">
                 <label>N° conto</label>
-                <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>" required>
+                <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>">
             </div>
 
             <div class="form-group col">
