--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -67,7 +67,7 @@
             <div class="form-group col">
                 <label>Nome e Cognome</label>
                 <input type="text" class="form-control" name="xcli" maxlength="60" value="<%= xcli %>"
-                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
         </div>
         <div class="form-row">
@@ -150,16 +150,16 @@
             <div class="form-group col">
                 <label>Abi</label>
                 <input type="number" class="form-control" name="cabi" maxlength="5" value="<%= cabi %>"
-                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
             <div class="form-group col">
                 <label>Cab</label>
                 <input type="number" class="form-control" name="ccab" maxlength="5" value="<%= ccab %>"
-                       required <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
+                       <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
             <div class="form-group col">
                 <label>N° conto</label>
-                <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>" required
+                <input type="number" class="form-control" name="ncont" maxlength="12" value="<%= ncont %>"
                         <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
 
