--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -56,6 +56,10 @@
     </nav>
 </div>
 <div class="container-fluid">
+    <!-- show any messages that come back with authentication -->
+    <% if (message.length > 0) { %>
+    <div class="alert alert-danger"><%= message %></div>
+    <% } %>
     <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
         <div id="client">
             <table class="table table-hover">
